add toggview arg for rotatetags

--- a/dwl.desktop
+++ b/dwl.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=dwl
 Comment=dwm for Wayland
-Exec=dwl
+Exec=env XDG_CURRENT_DESKTOP=sway XDG_SESSION_DESKTOP=sway XDG_SESSION_TYPE=wayland dwl
 Type=Application
